Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
Currently, Thrift objects in Java don't implement Comparable if any field is a set or a map.
The patch attached implements Comparable for those cases. If we can compare a List, we should be able to compare a Set just as easily. This implementation compares two thrift objects by comparing the sorted entries of each set or map.